--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.5",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "jotai": "^2.9.3",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
